syntax = "proto3";
package zhiliao_product_srv;


service Products {
    rpc ProductList(ProductsRequest) returns (ProductsResponse){}
    rpc ProductAdd (ProductAddRequest) returns (ProductAddResponse){}
    rpc ProductDel (ProductDelRequest) returns (ProductAddResponse){}
    rpc ProductToEdit(ProductToEditRequest) returns (ProductToEditResponse){}
    rpc ProductDoEdit (ProductEditRequest) returns (ProductEditResponse){}
}


message ProductEditRequest {
    int32 id = 1;
    string name = 2;
    float price = 3;
    int32 num = 4;
    string unit = 5;
    string pic = 6;
    string desc = 7;
    string create_time = 8;
}

message ProductEditResponse {
    int32 code = 1;
    string msg = 2;
}




message ProductDelRequest {
    int32 id = 1;
}

message ProductToEditRequest {
    int32 id = 1;
}

message ProductToEditResponse{
    int32 code = 1;
    string msg = 2;
    Product product = 3;

}



message ProductAddRequest {
    string name = 1;
    float price = 2;
    int32 num = 3;
    string unit = 4;
    string pic = 5;
    string desc = 6;
    string create_time = 7;
}

message ProductAddResponse {
    int32 code = 1;
    string msg = 2;
}

message ProductsRequest {
    int32 current_page = 1;
    int32 pagesize = 2;
}


message ProductsResponse {
    int32 code = 1;
    string msg = 2;
    repeated Product products =3;
    int32 total= 4;
    int32 current = 5;
    int32 page_size = 6;
}


message Product {
    int32 id = 1;
    string name = 2;
    float price = 3;
    int32 num = 4;
    string unit = 5;
    string pic = 6;
    string desc = 7;
    string create_time = 8;
}